# vae-sound-generation

./: .gitignore  README.md  pyproject.toml
soundgen/: train.py  utils.py
soundgen/ae/: __init__.py  ae.py  generate_from_latent_space.py  test_ae.py  test_load_ae.py  train_ae.py
soundgen/scripts/: generate_from_latent_space.py  test_script.py  train_script.py
soundgen/vae/: __init__.py  vae.py
