[project]
name = "vae-sound-generation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true
